objects/EC_Template_for_Skyworks_Qorvo__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EC Template for Skyworks Qorvo</relationshipLabel>
        <relationshipName>EC_Template_for_Skyworks_Qorvo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Automotive_Device__c</fullName>
        <label>Automotive Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Rules_Applied__c</fullName>
        <label>Design Rules Applied</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Device_Description__c</fullName>
        <label>Device Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ECCN_Technology__c</fullName>
        <label>ECCN-Technology</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ECCN_Wafer__c</fullName>
        <label>ECCN-Wafer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Application__c</fullName>
        <label>End Application</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Export_Control_Template__c</fullName>
        <label>Export Control Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Switch Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>PA Controller Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Low Noise Amplifier (LNA) Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Antenna Tuner Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Power Amplifier Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Power Amplifier Devices for WiFi End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Low Noise Amplifier (LNA) Devices for WiFi End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Switch Devices for WiFi End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Power Amplifier Controller Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>RF Switch Devices for Cellular End Use Applications</fullName>
                </value>
                <value>
                    <fullName>Power Management Devices for Battery/Charger End Use Applications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <label>IsActive</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <label>Q1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <label>Q2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <label>Q3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q6_a__c</fullName>
        <label>Q6(a)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q7_a__c</fullName>
        <label>Q7(a)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Semiconductor_Device__c</fullName>
        <label>Semiconductor Device</label>
        <type>TextArea</type>
    </fields>
    <label>EC Template for Skyworks Qorvo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Export_Control_Template__c</columns>
        <columns>Q1__c</columns>
        <columns>Q2__c</columns>
        <columns>Q3__c</columns>
        <columns>Q4__c</columns>
        <columns>Q5__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Device_Description__c</columns>
        <columns>End_Application__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Semiconductor_Device__c</columns>
        <columns>IsActive__c</columns>
        <columns>Design_Rules_Applied__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ECT-{0000}</displayFormat>
        <label>EC Template for Skyworks Qorvo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EC Template for Skyworks Qorvo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>